# wayfarer

./: .editorconfig  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
crates/save/: Cargo.toml
crates/save/src/: companion.rs  glyphs.rs  level.rs  lib.rs  murals.rs  robe.rs  scarf.rs  symbol.rs  symbol_parts.txt  test.rs
crates/wayfarer/: Cargo.toml
crates/wayfarer/src/: edit.rs  gui.rs  main.rs  show.rs  state.rs  tui.rs  watcher.rs
crates/wayfarer/src/tui/: events.rs  state.rs  view.rs
crates/wayfarer/src/tui/view/: info.rs  status_bar.rs
crates/wayfarer/src/tui/view/info/: companions.rs  glyphs.rs  murals.rs  stats.rs
