[package]
name = "wayfarer"
version.workspace = true
edition.workspace = true
license-file.workspace = true


[dependencies]
anyhow = "1.0"

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.jrny-save]
version = "0.1"
path = "../save"

[dependencies.notify]
version = "6.0"
optional = true

[dependencies.ratatui]
version = "0.22"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true

[features]
default = ["watch", "gui"]
watch = ["dep:notify"]
gui = ["dep:ratatui", "dep:crossterm"]
