[package]
name = "wayfarer"
version.workspace = true
edition.workspace = true
license-file.workspace = true


[dependencies]
anyhow = "1.0"
directories = "5.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
signal-hook = "0.3"

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.jrny-save]
version = "0.4"
path = "../save"

[dependencies.ratatui]
version = "0.22"

[dependencies.tui-input]
version = "0.8"

[dependencies.crossterm]
version = "0.27"

[dependencies.notify]
version = "6.0"
optional = true


[features]
default = ["watch"]
watch = ["dep:notify"]
